<resources>
    <string name="app_name">Bedu Coffee</string>

    <string name="username">User Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="sign_in">Sign In</string>
    <string name="given_name">Given Name</string>
    <string name="email">Email</string>
    <string name="donuts">Donuts</string>
    <string name="coffee">Coffee</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="Amount_to_pay">Amount to pay $</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="select_size">Select Size</string>
    <string name="not_empty">Field must not be empty</string>
    <string name="success">Login successful</string>
    <string name="fail">User and password did not match</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Products</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="upperLimit">The quantity can´t be more than 50</string>
    <string name="lowerLimit">The quantity can´t be less than 0</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="jumbo">Jumbo</string>
    <string name="no_selection">There is no selection</string>
    <string name="Select_again">Try again with your selection</string>
    <string name="size_not_selected">Size was not selected</string>
    <string name="remove_item">Remove item?</string>
    <string name="delete">Delete</string>
    <string name="payment_options">Payment options</string>
    <string name="cash">Cash</string>
    <string name="credit_or_debit_card">Credit or Debit Card</string>
    <string name="submit_order">Submit Order</string>
    <string name="channel_general">Generales</string>
    <string name="general_description">Notificaciones generales</string>
    <string name="channel_others">Diversos</string>
    <string name="others_description">Notificaciones diversas</string>
    <string name="simple_title">Order sent</string>
    <string name="simple_body">"Your order has been succefull sent to store, we´ll have it ready when you arrive!!"</string>
    <string name="action_login_title">Welcome to BEDU Coffee</string>
    <string name="action_body">Now you have access to best shop of coffee and donuts. With just a click login to our virtual shop</string>
    <string name="version">Version 3.5.1</string>
    <string name="downloading">Downloading…</string>
    <string name="title_file_download">APK is downloading</string>
    <string name="storage_access_required">Storage access is required to downloading the file.</string>
    <string name="storage_permission_denied">Storage permission request was denied.</string>
    <string name="ok">OK</string>
    <string name="new_version">New version</string>
    <string name="new_version_msg">We recommend installing the update</string>
    <string name="btn_update">Update</string>
    <string name="btn_cancel">Cancel</string>
    <string name="your_current_position_is">Your current position is: </string>
    <string name="this_is_the_store_nearest_to_you">This is the store nearest to you</string>
    <string name="buy_cart">Buy Cart</string>
    <string name="gps_is_off">GPS is off</string>
    <string name="please_write_a_valid_email">Please write a valid email and password</string>
    <string name="remove">Remove</string>
</resources>