<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/optionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/sign_up_text"
        android:textStyle="bold"
        android:text="@string/payment_options"
        android:layout_marginTop="125dp"
        android:layout_marginStart="95dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/radioCash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/sign_up_text"
        android:text="@string/cash"
        app:layout_constraintTop_toBottomOf="@+id/optionText"
        android:layout_marginStart="95dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <CheckBox
        android:id="@+id/radioCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/sign_up_text"
        android:text="@string/credit_or_debit_card"
        android:layout_marginStart="95dp"
        app:layout_constraintTop_toBottomOf="@+id/radioCash"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/sign_up_text"
        android:text="@string/your_current_position_is"
        android:layout_marginStart="75dp"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioCard">
    </TextView>

    <TextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/sign_up_text"
        android:text="@string/this_is_the_store_nearest_to_you"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/position"
        />

    <TextView
        android:id="@+id/storeLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/sign_up_text"
        android:text="Sucursal Nuevo Mexicali"
        android:layout_marginTop="25dp"
        android:layout_marginStart="85dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationText"/>

    <Button
        android:id="@+id/purchaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="52dp"
        android:text="@string/submit_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeLocation" />


</androidx.constraintlayout.widget.ConstraintLayout>